<resources>
    <string name="app_name">FirstCalculator</string>
    <string name="res">=4</string>
    <string name="string">2+2</string>
    <string name="clear">C</string>
    <string name="moduloString">%</string>
    <string name="divideString">/</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="multiplyString">*</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="addString">+</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="subtractString">-</string>
    <string name="AllClearString">AC</string>
    <string name="digit_0">0</string>
    <string name="digit_dot">.</string>
    <string name="equalString">=</string>
    <string name="type_here">Type here...</string>
</resources>