<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="135dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />


            <TextView
                android:id="@+id/data_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text_style"
                android:hint="@string/type_here"
                android:padding="10dp"
                android:text=""
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textColorHint="#A0A0A0"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/result_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/result_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/solution_style"
                android:padding="10dp"
                android:text=""
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/linecolor"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/result_tv"
                app:layout_constraintTop_toTopOf="@+id/newScroll" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_clear"
                        style="@style/operatorbutton"
                        android:onClick="onClearClick"
                        android:text="@string/clear" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_back"
                        style="@style/digibutton"
                        android:contentDescription="@string/app_name"
                        android:onClick="onBackClick"
                        app:icon="@drawable/baseline_backspace_24"
                        app:iconTint="@color/btnBackground2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_modulo"
                        style="@style/operatorbutton"
                        android:onClick="onOperatorClick"
                        android:text="@string/moduloString" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_divide"
                        style="@style/operatorbutton"
                        android:onClick="onOperatorClick"
                        android:text="@string/divideString" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_7"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_7" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_8"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_8" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_9"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_9" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_multiply"
                        style="@style/operatorbutton"
                        android:onClick="onOperatorClick"
                        android:text="@string/multiplyString" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_4"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_4" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_5"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_5" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_6"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_6" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add"
                        style="@style/operatorbutton"
                        android:onClick="onOperatorClick"
                        android:text="@string/addString" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_1"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_2"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_3"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_3" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_subtract"
                        style="@style/operatorbutton"
                        android:onClick="onOperatorClick"
                        android:text="@string/subtractString" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_allclear"
                        style="@style/operatorbutton"
                        android:onClick="onAllclearClick"
                        android:text="@string/AllClearString"
                        android:textSize="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_0"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_0" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_dot"
                        style="@style/digibutton"
                        android:onClick="onDigitClick"
                        android:text="@string/digit_dot" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_equal"
                        style="@style/operatorbutton"
                        android:backgroundTint="@color/btnBackground2"
                        android:onClick="onEqualClick"
                        android:text="@string/equalString"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>